--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -4,7 +4,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
   "appId": "NavioX",
-  "asar": true,
+  "asar": false,
   "productName": "Navio X",
   "directories": {
     "output": "release/${version}"
