--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@vue/cli-service": "^5.0.8",
     "apexcharts": "^3.48.0",
     "bitcoin-core": "^4.1.0",
+    "decompress": "^4.2.1",
     "flowbite": "^2.2.1",
     "flowbite-vue": "^0.1.2",
     "highlight.js": "^11.9.0",
